force-app/main/default/objects/Custom_Key__c/Custom_Key__c.object-meta.xml
<CustomObject>
    <label>DocGenius Custom Key</label>
    <nameField>
        <displayFormat>DG_Custom_Key-{000000}</displayFormat>
        <label>DocGenius Custom Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>