force-app/main/default/objects/Custom_Key__c/fields/Custom_Key_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Key_Name__c</fullName>
    <label>Custom Key Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>