force-app/main/default/objects/Custom_Key__c/fields/Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Object_Label__c</fullName>
    <label>Object Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>