force-app/main/default/objects/Custom_Key__c/fields/Parent_Keys__c.field-meta.xml
<CustomField>
    <fullName>Parent_Keys__c</fullName>
    <label>Parent Keys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>