force-app/main/default/objects/Custom_Key__c/fields/Queried_Fields__c.field-meta.xml
<CustomField>
    <fullName>Queried_Fields__c</fullName>
    <label>Queried Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>