force-app/main/default/objects/Custom_Key__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <label>Query</label>
    <length>50000</length>
    <type>LongTextArea</type>
    <unique>true</unique>
</CustomField>